--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,65 @@
+# macOS generic Gitignore file
+# Taken from github.com/github/gitignore
+# /Global/macOS.gitignore
+# ----------------------------------------------------------
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+# ==========================================================
+# Windows generic Gitignore file
+# Taken from github.com/github/gitignore
+# /Global/Windows.gitignore
+# ----------------------------------------------------------
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+
+# Dump file
+*.stackdump
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# ==========================================================
+# Everything else
+# ----------------------------------------------------------
 # Ignore .env file which has sensitive information
 .env
